Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- updated Brazilian Portuguese translations (Thanks to Mario Olimpio de Menezes
  <mario [at] curiango.ipen.br>)
-
Bug fixes:
~~~~~~~~~~
- If you try to update your directory entry you would get an error that the
  password is too short (#1028).
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Moved the cleanFileName method from CPSSchemas to CPSUtil.